--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ section {
 }
 
 .welcome-section {
-    background-color: var(--secondary-color);
+    background: url(https://www.dresden-is.de/cdn/img/Discover/Campuses/School_Campus_web.jpg);
     text-align: center;
 }
 
