--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ section {
 }
 
 .welcome-section {
-    background: url(https://www.dresden-is.de/cdn/img/Discover/Campuses/School_Campus_web.jpg);
+    background: url("https://www.dresden-is.de/cdn/img/Discover/Campuses/School_Campus_web.jpg");
     text-align: center;
 }
 
