--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ main {
     justify-content: center;
     text-align: center;
     color: var(--light-text-color);
+    background-size: cover;
 }
 
 .hero-content {
@@ -160,11 +161,13 @@ main {
 .hero h1 {
     font-size: 3.5rem;
     font-weight: 700;
+    color: black;
 }
 
 .hero p {
     font-size: 1.25rem;
     margin-bottom: 2rem;
+    color: black;
 }
 
 .btn {
